welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:21: error: '(' expected but identifier found.
  if vuBiscuit = true
     ^