welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = 
{
  var vuBiscuit = false
  var nbPas = 0
  while (!estSurBiscuit() && nbPas < 6)
  {
    if (estSurBiscuit())
    {
      vuBiscuit = true
    }
    else
    {
      avance()
      nbPas = nbPas + 1
    }
  } 
  for (i<- 1 to nbPas)
  {
    recule()
  }
  if vuBiscuit = true
  {
    return true
  }
  else
  {
  return false
  }
}